--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:2.1.3'
     }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 repositories {
     mavenCentral()
@@ -18,16 +18,17 @@ repositories {
 
 dependencies {
     compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.16'
-    compile 'com.osbcp.cssparser:cssparser:1.5'
+    testCompile 'junit:junit:4.12'
 }
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion "19.1.0"
-
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
     defaultConfig {
-        minSdkVersion 7
-        targetSdkVersion 17
+        minSdkVersion 14
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
     }
 }
 
