--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="net.nightwhistler.htmlspanner"
-          android:versionCode="05"
-          android:versionName="0.5">
+          package="net.nightwhistler.htmlspanner">
 
-    <uses-sdk
-            android:minSdkVersion="7"
-            android:targetSdkVersion="17"/>
 
     <application/>
 
